<resources>
    <string name="app_name">APPS</string>
    <string name="app_description">스마트하게 예약하고 알람까지</string>
    <string name="app_nick_name">APPS</string>
    <string name="app_label">앱스</string>
    <string name="text_confirm">확인</string>
    <string name="text_cancel">취소</string>
    <string name="menu_title_app">앱 고르기</string>
    <string name="menu_title_alarm">알람예약</string>
    <string name="time_picker_radio_every">반복</string>
    <string name="time_picker_radio_once">한번</string>
    <string name="topic_title_category_app">기본앱</string>
    <string name="topic_title_game_app">게임</string>
    <string name="topic_title_all_app">모든앱</string>
    <string name="topic_title_like_app">즐겨찾기</string>
    <string name="topic_title">빠른 앱 찾기</string>
    <string name="tooltip_button_start">실행</string>
    <string name="tooltip_button_unlike">추가</string>
    <string name="tooltip_button_like">취소</string>
    <string name="tooltip_button_alarm">등록</string>
    <string name="search_view_query_hint">앱이름을 넣어주세요</string>
    <string name="confirm_alarm_message">알람예약 등록되었습니다</string>
    <string name="cancel_alarm_message">알람예약 취소되었습니다</string>
    <string name="permission_alarm_message">권한이 없습니다</string>
    <string name="empty_alarm_data">알람예약이 없습니다</string>
    <string name="empty_like_app_data">즐겨찾기 목록이 없습니다</string>
    <string name="empty_button_save_like">자주사용앱 추가해보기</string>
    <string name="move_notification_page">알림 페이지로 이동합니다</string>
    <string name="save_like_app">즐겨찾기 추가되었습니다</string>
    <string name="cancel_like_app">즐겨찾기 삭제되었습니다</string>
    <string name="donation_comment">더 나은 앱 기능과 앱 개발환경을 위해\n동행해주시는 후원자님께\n마음을 다해 감사의 인사를 전합니다</string>
    <string name="donation_button_comment">후원하기</string>
    <string name="donation_confirm_comment">후원 감사합니다</string>
    <string name="donation_cancel_comment">후원 취소되었습니다</string>
    <string name="service_error">잠시후 다시 시도해주세요</string>
    <string name="version_update_comment">업데이트 하시겠습니까?</string>
</resources>