<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/topic_title_like_app"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/linear_layout_app_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:minHeight="200dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view_icon_empty_data"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_empty_data"
                app:tint="?attr/colorOnSecondary" />

            <TextView
                android:id="@+id/text_view_empty_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view_icon_empty_data"
                android:layout_centerInParent="true"
                android:text="@string/empty_like_app_data"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_save_like_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_button_empty_add_like_app"
                android:text="@string/empty_button_save_like"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>


</layout>