<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.minikode.apps.vo.AppInfoVo" />
    </data>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_layout_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_start"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_action_start"
                android:backgroundTint="?attr/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tooltip_button_start"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorOnPrimary" />

        <LinearLayout
            android:id="@+id/linear_layout_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_view_icon_like"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_action_like"
                android:backgroundTint="?attr/colorPrimary"
                android:visibility="@{model.likeFlag ? View.GONE : View.VISIBLE}" />

            <TextView
                android:id="@+id/text_view_icon_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tooltip_button_unlike"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp"
                android:visibility="@{model.likeFlag ? View.GONE : View.VISIBLE}" />

            <ImageView
                android:id="@+id/image_view_icon_unlike"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_action_unlike"
                android:backgroundTint="?attr/colorPrimary"
                android:visibility="@{!model.likeFlag ? View.GONE : View.VISIBLE}" />

            <TextView
                android:id="@+id/text_view_icon_unlike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tooltip_button_like"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp"
                android:visibility="@{!model.likeFlag ? View.GONE : View.VISIBLE}" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?attr/colorOnPrimary" />

        <LinearLayout
            android:id="@+id/linear_layout_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_alarm"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_action_alarm"
                android:backgroundTint="?attr/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tooltip_button_alarm"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</layout>
