<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.minikode.apps.vo.AppInfoVo" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_popup_content">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:fontFamily="@font/pretendard_bold"
            android:maxLines="1"
            android:text="@{model.label}"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@id/app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@{model.iconDrawable}"
            app:layout_constraintBottom_toTopOf="@id/linear_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_title" />

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon">

            <LinearLayout
                android:id="@+id/linear_layout_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icon_start"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_action_start"
                    android:backgroundTint="?attr/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tooltip_button_start"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary" />

            <LinearLayout
                android:id="@+id/linear_layout_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image_view_icon_like"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_action_unlike"
                    android:backgroundTint="?attr/colorPrimary"
                    android:visibility="@{model.likeFlag ? View.GONE : View.VISIBLE}" />

                <TextView
                    android:id="@+id/text_view_icon_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tooltip_button_unlike"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="12sp"
                    android:visibility="@{model.likeFlag ? View.GONE : View.VISIBLE}" />

                <ImageView
                    android:id="@+id/image_view_icon_unlike"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_action_like"
                    android:backgroundTint="?attr/colorPrimary"
                    android:visibility="@{!model.likeFlag ? View.GONE : View.VISIBLE}" />

                <TextView
                    android:id="@+id/text_view_icon_unlike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tooltip_button_like"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="12sp"
                    android:visibility="@{!model.likeFlag ? View.GONE : View.VISIBLE}" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?attr/colorOnPrimary" />

            <LinearLayout
                android:id="@+id/linear_layout_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icon_alarm"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@drawable/ic_action_alarm"
                    android:backgroundTint="?attr/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tooltip_button_alarm"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
